# identity-service

./: .env  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: build-service.yml
sql/: create.sql
src/: authentication.rs  db.rs  main.rs  persistence.rs  rest.rs
src/auth/: domain.rs  jwt.rs  mod.rs  passwords.rs  rest.rs
src/runtime/: config.rs  mod.rs  rest.rs
