[package]
name = "identity-service"
version = "0.1.0"
authors = ["Dmitri Astafiev <demius.md@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6", features = ["headers"] }
axum-server = "0.5"
base64 = "0.21.2"       # endcode/decode password hash into/from Base64
data-encoding = "2.4.0" # endcode/decode password hash into/from Base64
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.0"
log = "0.4"
ring = "0.16.20"        # generate password hash
serde = "1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# framework for instrumenting Rust programs to collect structured, event-based diagnostic information
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.3.3", features = ["v4"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true        # Enable link Time Optimization
strip = "debuginfo"
codegen-units = 2 # Parallel Codegeneration (default: 16)
